--- a/P4/G.html
+++ b/P4/G.html
@@ -7,7 +7,7 @@
 <body style="background-color: lightblue;">
     <h1>GUANINE</h1>
     <p>Letter: G</p>
-    <p>Chemical formula: C5H6N2O2</p>
+    <p>Chemical formula: C5H5N5O</p>
     <a href="https://es.wikipedia.org/wiki/Guanina">More info</a>
     <p></p>
     <a href="http://127.0.0.1:8080/info/">Main page</a>
