--- a/P5/info/C.html
+++ b/P5/info/C.html
@@ -7,7 +7,7 @@
 <body style="background-color: yellow;">
     <h1>CYTOSINE</h1>
     <p>Letter: C</p>
-    <p>Chemical formula: C4H5N3O</p>
+    <p>Chemical Formula: C4H5N3O</p>
     <a href="https://es.wikipedia.org/wiki/Citosina">More info</a>
     <p></p>
     <a href="http://127.0.0.1:8080/info/">Main page</a>
