--- a/P5/info/T.html
+++ b/P5/info/T.html
@@ -7,7 +7,7 @@
 <body style="background-color: pink;">
     <h1>THYMINE</h1>
     <p>Letter: P</p>
-    <p>Chemical formula: C5H6N2O2</p>
+    <p>Chemical Formula: C5H6N2O2</p>
     <a href="https://en.wikipedia.org/wiki/Thymine">More info</a>
     <p></p>
     <a href="http://127.0.0.1:8080/info/">Main page</a>
