--- a/P5/Error.html
+++ b/P5/Error.html
@@ -7,7 +7,7 @@
     <h1>ERROR</h1>
     <p>Resource not available</p>
     <p></p>
-    <a href="http://127.0.0.1:8080/index/">Main page</a>
+    <a href="http://127.0.0.1:8080/info/">Main page</a>
 
 </body>
 </html>
