--- a/P5/G.html
+++ b/P5/G.html
@@ -10,7 +10,7 @@
     <p>Chemical Formula: C5H5N5O</p>
     <a href="https://es.wikipedia.org/wiki/Guanina">More info</a>
     <p></p>
-    <a href="http://127.0.0.1:8080/info/">Main page</a>
+    <a href="http://127.0.0.1:8080/">Main page</a>
 
 </body>
 </html>
