--- a/Session-16/form-EX01.html
+++ b/Session-16/form-EX01.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>FORM 1</title>
-  </head>
-  <body>
-    <form action="echo" method="get">
-      Message to send to the server: <br>
-      <input type="text" name="msg">
-      <input type="submit" value="SEND">
-    </form>
-  </body>
-</html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <title>Received message:</title>
+        </head>
+        <body >
+            <h1>Received message: </h1>
+            <p></p>
+        </body>
+    </html>
