--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Final Project</title>
+    <title>Welcome!!</title>
   </head>
   <body style="background-color: lightyellow;">
     <h1>Browsing Human and vertebrates genome</h1>
