--- a/Final-Project/Error.html
+++ b/Final-Project/Error.html
@@ -9,5 +9,6 @@
 <p>Welcome to the DATA ERROR server</p>
 <p>If you are here is because the data you have entered does not exist in the ensembl</p>
 <p>Sorry!!!</p>
+<a href="/">Main page</a>
 </body>
 </html>
